--- a/style.css
+++ b/style.css
@@ -19,11 +19,13 @@ body {
 }
 
 .menu {
-    display: flex;
     align-items: stretch;
     flex-direction: column;
     gap: 40px;
     display: none;
+}
+.menu.show{
+    display: flex;
 }
 
 .menu .head {
@@ -129,11 +131,13 @@ body {
 }
 
 .board {
-    display: flex;
     flex-direction: column;
     align-items: stretch;
     gap: 19px;
     display: none;
+}
+.board.show{
+    display: flex;
 }
 
 .board .head {
@@ -141,7 +145,6 @@ body {
     align-items: center;
     justify-content: space-between;
 }
-
 
 .board .head .turn {
     gap: 13px;
@@ -227,14 +230,23 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #1F3641;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 64px;
     border-radius: 15px;
     box-shadow: inset 0 -8px 0 0 #10212A;
 }
-.board .body .case img{
+.board .body .case.empty::after{
+    content: "";
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #1F3641;
 }
-
+.board .body .case.empty:hover::after{
+    background-color: transparent;
+}
 .result{
     position: absolute;
     top: 0;
@@ -245,6 +257,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
+}
+.result.show{
+    display: block;
 }
 .container{
     width: 100%;
@@ -350,6 +366,7 @@ body {
     .board .body .case{
         width: 96px;
         height: 96px;
+        background-size: 40px;
         padding: 24px 28px 32px;
     }
     .board .foot>div p {
