--- a/style.css
+++ b/style.css
@@ -238,8 +238,8 @@ body {
 }
 .board .body .case.empty::after{
     content: "";
-    width: 100%;
-    height: 100%;
+    width: 120%;
+    height: 120%;
     top: 0;
     left: 0;
     background-color: #1F3641;
@@ -260,7 +260,16 @@ body {
     display: none;
 }
 .result.show{
-    display: block;
+    display: flex;
+    animation: showResult 1s;
+}
+@keyframes showResult {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .container{
     width: 100%;
